# obs-news-reaction

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: pdmr_parsed.json
src/obs_news_reaction/: __init__.py  __main__.py  cli.py  config.py  export.py  models.py  monitor.py  signals.py
src/obs_news_reaction/analysis/: backtest.py  engine.py  enriched.py  historical.py  insider.py  mean_reversion.py
src/obs_news_reaction/db/: operations.py  schema.py  schema.sql
src/obs_news_reaction/news/: historical.py  pdmr_parser.py  poller.py  scraper.py
src/obs_news_reaction/prices/: fetcher.py  meta.py
src/obs_news_reaction/utils/: oslo_tz.py
src/obs_news_reaction/viz/: charts.py
tests/: test_analysis.py  test_cli.py  test_models.py  test_oslo_tz.py  test_scraper.py
