[project]
name = "obs-news-reaction"
version = "0.1.0"
description = "Oslo Bors News Reaction Timer - measures stock price reaction speed to announcements"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "yfinance>=0.2.0",
    "playwright>=1.40.0",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.1.0",
]

[project.scripts]
obs-nr = "obs_news_reaction.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
